--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,10 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>50.0</version>
     <types>
+        <members>Sample</members>
+        <name>ApexClass</name>
+    </types>
+    <types>
         <members>es</members>
         <name>Translations</name>
     </types>
